k8syaml/sonarqube/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posql-sonar
  namespace: cicd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.3
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: '1000m'
              memory: 2Gi
            requests:
              cpu: 800m
              memory: 2Gi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pv-data

---
apiVersion: v1
kind: Service
metadata:
  name: posql-sonar
  namespace: cicd
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30303
  selector:
   app: postgres
